--- a/Bibliography.tex
+++ b/Bibliography.tex
@@ -62,6 +62,9 @@
 	 	\bibitem{Kripke}
 	 	Kripke, S. Semantical Considerations on Modal Logic. {\em Acta Philosophica Fennica} {\bf 1963}, {\em 16}: 83-94.
 	 	
+	 	\bibitem{Lenzen}
+	 	Lenzen, W. Recent work in epistemic logic. {\em Acta Philosophica Fennica} {\bf 1972}, {\em 30(1)}: 1-219.
+	 	
 	 	\bibitem{negri}
 	 	Negri, S. Kripke completeness revisited. {\em Acts of Knowledge: History, Philosophy and Logic: Essays Dedicated to G{\"o}ran Sundholm} {\bf 2009}, 247-282.
 	 	
