--- a/Chapter_03.tex
+++ b/Chapter_03.tex
@@ -255,6 +255,8 @@ Rushby makes the following argument against including operators for knowledge an
 
 We argue that premise 3 is false. Specifically, we argue that Rushby's model does not accurately capture the relationship between the pilot's beliefs and unsafe action.
 
+In Rushby's alternative model, he discusses a pilot's discernment of the presence of instrument conflict, which he assumes for simplicity to be always accurate. Is this not an assumption of knowledge for simplicity? Similarly, when the pilot is aware of the autopilot status through observing an indicator on a display or through inference from the aircraft's behavior, it is not clear that this is not a case of knowing the autopilot's status. Rushby's description of the true belief seems to make it fit with any epistemologist's theory of knowledge. 
+
 \subsubsection*{Knowledge and Belief Axioms}
 Knowledge is weaker here than in most epistemic logics~\cite{FHMV,DEL,Hintikka}. Knowledge is almost universally formalized as an S5 modal operator, including axiom schema for positive and negative introspection. Rushby suspects that because the analyses of aviation mishaps lays the blame on a failure of negative introspection in~\cite{AhrenbachGoodloe}, the decision to exclude the negative introspection axiom from the schema appears contrived. Rushby proves that to include the negative introspection axiom would cause a collapse of knowledge and belief into equivalence, due to the axiom \emph{Confidence in Belief}: $\Bels{i}\varphi \iimplies \Bels{i}\Kns{i}\varphi$, which to our knowledge was first proved by Lenzen~\cite{Lenzen}. \emph{Confidence in Belief}, additionally, is the converse of Hintikka's choice for relating the two: $\Bels{i}\Kns{i}\varphi \iimplies \Bels{i}\varphi$. Axiom \emph{Confidence in Belief} will be defended below. Rushby's concern with the knowledge axioms, or lack thereof, can be summarized as follows.
 
@@ -270,9 +272,20 @@ Our representation of the argument here is based directly on Rushby's claims in 
 
 We shall argue that premise 4 is false. Rushby's preference for the standard axioms, based on their preservation of an analysis based on false beliefs, fails to account for a feature of the present axioms which we shall endeavor to establish, namely that they more accurately describe real human knowledge and belief relations, whereas the standard axioms do not. Thus, while it is true that the analytical strength of the standard axioms would be preserved based on a false belief analysis, it does not follow that these axioms are preferable, because they do not accurately model human agency.
 
-First, we defend the exclusion of negative introspection for the knowledge operator. Negative introspection, recall, holds that $\tlnot\Kns{i}\varphi\iimplies\Kns{i}\tlnot\Kns{i}\varphi$: If an agent, \emph{i} does not know $\varphi$, then \emph{i} knows that she does not know it. When it is phrased this way, it can seem at worst a bit confusing, but not obviously false. However, consider one's response when it is phrased the following equivalent way: An agent does not know $\varphi$ \emph{only if} she knows that she does not know $\varphi$. This deformalized version of the axiom makes it clear that knowledge of ignorance is being asserted as a \emph{necessary condition} for ignorance, or lack of knowledge. One would be hard pressed to find an epistemologist willing to defend this view, even if it would lead to fame and tenure. To further elaborate on the point, consider the contrapositive: $\tlnot\Kns{i}\tlnot\Kns{i}\varphi \iimplies \Kns{i}\varphi$: If \emph{i} does not know that she does not know $\varphi$, then she knows $\varphi$. The Pyrrhonian skeptics, famous for rejecting knowledge even of the claim ``I don't know anything", thereby know everything. Take that skeptics!
+First, we defend the exclusion of negative introspection for the knowledge operator. Negative introspection, recall, holds that $\tlnot\Kns{i}\varphi\iimplies\Kns{i}\tlnot\Kns{i}\varphi$: If an agent, \emph{i} does not know $\varphi$, then \emph{i} knows that she does not know it. When it is phrased this way, it can seem at worst a bit confusing, but not obviously false. However, consider one's response when it is phrased the following equivalent way: An agent does not know $\varphi$ \emph{only if} she knows that she does not know $\varphi$. This deformalized version of the axiom makes it clear that knowledge of ignorance is being asserted as a \emph{necessary condition} for ignorance, or lack of knowledge. One would be hard pressed to find an epistemologist willing to defend this view. To further elaborate on the point, consider the contrapositive: $\tlnot\Kns{i}\tlnot\Kns{i}\varphi \iimplies \Kns{i}\varphi$: If \emph{i} does not know that she does not know $\varphi$, then she knows $\varphi$. The Pyrrhonian skeptics famously denied claims to all knowledge, even to the claim that they know nothing. Thus, for all formulas $\varphi$, $\tlnot\Kns{Pyrrhonian}\tlnot\Kns{Pyrrhonian}\varphi$. According to the negative introspection axiom, then, $\Kns{Pyrrhonian}\varphi$ for arbitrary $\varphi$, certainly a result they would be disturbed by.
 
-In Rushby's alternative model, he discusses a pilot's discernment of the presence of instrument conflict, which he assumes for simplicity to be always accurate. Is this not an assumption of knowledge for simplicity? Similarly, when the pilot is aware of the autopilot status through observing an indicator on a display or through inference from the aircraft's behavior, it is not clear that this is not a case of knowing the autopilot's status. Rushby's description of the true belief seems to make it fit with any epistemologist's theory of knowledge.  
+Many find it intuitive to speak of the epistemic relation as an equivalence or indistinguishability relation, which requires it be symmetric. Symmetry, combined with the reflexivity underlying the Truth Axiom and transitivity of positive introspection, yields such an equivalence relation. It makes sense to say that world $v$ is epistemically possible from world $w$ for agent $i$ if $i$ cannot tell the two worlds apart, \emph{i.e.} they are indistinguishable. The power of this intuitive appeal presents a challenge for us. We must show that our axiom schema can satisfy the intuition behind epistemic indistinguishability without imposing symmetry on the epistemic relation.
+
+The key to achieving this is through the composition of the doxastic relation with the epistemic relation. From a first person perspective, our model does collapse belief and knowledge together. That means that an agent cannot distinguish her mere beliefs from her genuine knowledge. 
+
+\begin{theorem}[Weak Knowledge-Belief Indistinguishability]
+	For all $w,v \in W$, if $w(\Rel{k}^i \circ \Rel{b}^i)v$ then for all $w' \in W$, $w\Rel{b}^iw'$ implies $\Rel{b}^i(w') = \Rel{k}^i(w') = \Rel{k}^i(v) = \Rel{b}^i(v)$.
+\end{theorem}
+
+\begin{theorem}[Strong Knowledge-Belief Indistinguishability]
+	For all $w,v \in W$, if $w\Rel{b}^i)w$ then for all $v \in W$, $w\Rel{b}^iv$ implies $\Rel{b}^i(w) = \Rel{k}^i(w) = \Rel{k}^i(v) = \Rel{b}^i(v)$.
+\end{theorem}
+TODO. Proof.
 
 
 TODO. Belief is standard~\cite{FHMV}. They are related logically by EP(1-3), which hold that knowledge entails belief, belief entails that one believes that one knows, and belief entails than one knows that one believes. Finally, actions and safe actions are logically related by SP and PR, which hold that necessary consequences of \emph{mere} action are also necessary consequences of \emph{safe} actions, and that a pilot can execute an action only if he believes that he is executing a safe action. 
