--- a/ThesisMaster.tex
+++ b/ThesisMaster.tex
@@ -47,6 +47,7 @@
 \newtheorem{theorem}{Theorem}[section]
 \newtheorem{lemma}[theorem]{Lemma}
 \newtheorem{corollary}{Corollary}[theorem]
+\newtheorem{definition}{Definition}[theorem]
 %\usepackage{natbib}
 %\usepackage{microtype}
 % Coq lstlisting
